# gtot

./: CMakeLists.txt  GRANDEventADC.cpp  GRANDEventADC.h  GRANDEventVoltage.cpp  GRANDEventVoltage.h  GRANDRun.cpp  GRANDRun.h  LinkDef.h  TADC.cpp  TADC.h  TRawVoltage.cpp  TRawVoltage.h  TRun.cpp  TRun.h  Traces.c  Traces1.h  gp13.h  gtot.h  main.cpp  readme.md  scope.h
inc/: TADC.h  TRawVoltage.h  TRun.h  TRunRawVoltage.h  Traces.h  Traces1.h  Traces1_fv2.h  Traces_fv2.h  gp13.h  grand_auger.h  gtot.h  main_functions.h  scope.h
src/: TADC.cpp  TRawVoltage.cpp  TRun.cpp  TRunRawVoltage.cpp
